# riv

./: Cargo.toml  TODO.md  riv-planning.md  riv.desktop
.github/workflows/: build-deb.yml
src/: app.rs  cache.rs  config.rs  decode.rs  dir.rs  exif_view.rs  input.rs  main.rs  metadata.rs  state.rs  status_bar.rs
src/views/: compare.rs  grid.rs  list.rs  mod.rs  preview.rs  single.rs
